--- a/index.html
+++ b/index.html
@@ -13,9 +13,88 @@
 
 <body>
 
-    <div class="container top-image">
-      
+    <div class="top-image">
+        <img class="logo" src="images/market-logo.png" alt="logo-image">
     </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12 title input-group mb-3">
+                <h2>Make your Shopping List</h2>
+                <div class="input-group">
+                    <div class="custom-file input">
+
+                        <input class="form-control input-bar" type="text" placeholder="Product name">
+
+                        <div class="button">
+
+                            <button type="button" class="add-button">Add</button>
+
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 dynamicNum">
+                <p>You have 0 products to buy in the list:</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 input">
+                <p class="prod-to-buy">
+                    Product name </p>
+                <div class="button">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 input">
+                <p class="prod-to-buy">
+                    Product name </p>
+                <div class="button">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 input">
+                <p class="prod-to-buy">
+                    Product name </p>
+                <div class="button">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 input">
+                <p class="prod-delete">
+                    Product name </p>
+                <div class="button">
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 input">
+                <p class="prod-delete">
+                    Product name </p>
+                <div class="button">
+                    <button type="button" class="del-button">Delete</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- <footer>
+           <p>Ignacio Mattos © 2019</p> 
+    </footer> -->
+
 
 </body>
 
