--- a/index.html
+++ b/index.html
@@ -18,18 +18,19 @@
     </div>
     <div class="container">
         <div class="row">
-            <div class="col-12 title input-group mb-3">
-                <h2>Make your Shopping List</h2>
+            <div class="col-12 title input-group mb-3 col- col-sm-">
+                <h4>Make your Shopping List</h4>
                 <div class="input-group">
                     <div class="custom-file input">
 
                         <input class="form-control input-bar" type="text" placeholder="Product name">
 
-                        <div class="button">
-
+                        <div class="button show">
+                            <button type="button" class="button-input"><img class="add-icon" src="images/cart-add.png"
+                                    alt=""></button>
+                        </div>
+                        <div class="button hide">
                             <button type="button" class="add-button">Add</button>
-
-
                         </div>
                     </div>
 
@@ -37,63 +38,82 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 dynamicNum">
+            <div class="col-12 col- col-sm- dynamicNum">
                 <p>You have 0 products to buy in the list:</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 input">
+            <div class="col-12 col- col-sm- input">
                 <p class="prod-to-buy">
                     Product name </p>
-                <div class="button">
-                    <button type="button" class="add-button">Done</button>
-                    <button type="button" class="del-button">Delete</button>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 input">
-                <p class="prod-to-buy">
-                    Product name </p>
-                <div class="button">
-                    <button type="button" class="add-button">Done</button>
-                    <button type="button" class="del-button">Delete</button>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 input">
-                <p class="prod-to-buy">
-                    Product name </p>
-                <div class="button">
-                    <button type="button" class="add-button">Done</button>
-                    <button type="button" class="del-button">Delete</button>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 input">
-                <p class="prod-delete">
-                    Product name </p>
-                <div class="button">
-                    <button type="button" class="del-button">Delete</button>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 input">
-                <p class="prod-delete">
-                    Product name </p>
-                <div class="button">
-                    <button type="button" class="del-button">Delete</button>
 
+                <div class="button show">
+                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
+                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                </div>
+                <div class="button hide">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="col-12 col- col-sm- input">
+                <p class="prod-to-buy">
+                    Product name </p>
+                <div class="button show">
+                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
+                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                </div>
+                <div class="button hide">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col- col-sm- input">
+                <p class="prod-to-buy">
+                    Product name </p>
+                <div class="button show">
+                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
+                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                </div>
+                <div class="button hide">
+                    <button type="button" class="add-button">Done</button>
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col- col-sm- input">
+                <p class="prod-delete">
+                    Product name </p>
+                <div class="button show">
+                    <button type="button" class="button-trash"><img src="images/trash.png" alt=""></button>
+                </div>
+                <div class="button hide">
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12 col- col-sm- input">
+                <p class="prod-delete">
+                    Product name </p>
+                <div class="button show">
+                    <button type="button" class="button-trash"><img src="images/trash.png" alt=""></button>
+                </div>
+                <div class="button hide">
+                    <button type="button" class="del-button">Delete</button>
+                </div>
+            </div>
+        </div>
+
     </div>
-    <!-- <footer>
-           <p>Ignacio Mattos © 2019</p> 
-    </footer> -->
+    <footer>
+        <p>Ignacio Mattos © 2019</p>
+    </footer>
 
 
 </body>
