--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Market List</title>
+    <script src="https://kit.fontawesome.com/aa8bb51d18.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -26,8 +28,7 @@
                         <input class="form-control input-bar" type="text" placeholder="Product name">
 
                         <div class="button show">
-                            <button type="button" class="button-input"><img class="add-icon" src="images/cart-add.png"
-                                    alt=""></button>
+                            <button type="button" class="buttons"><i class="fas fa-cart-plus add-icon"></i></button>
                         </div>
                         <div class="button hide">
                             <button type="button" class="add-button">Add</button>
@@ -38,7 +39,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col- col-sm- dynamicNum">
+            <div class="col-12 col- col-sm- intro-component">
                 <p>You have 0 products to buy in the list:</p>
             </div>
         </div>
@@ -48,8 +49,8 @@
                     Product name </p>
 
                 <div class="button show">
-                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
-                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                    <button type="button" class="buttons"><i class="fas fa-check-circle check-icon"></i></button>
+                    <button type="button" class="buttons"><i class="fas fa-times-circle cruz-icon"></i></button>
                 </div>
                 <div class="button hide">
                     <button type="button" class="add-button">Done</button>
@@ -62,8 +63,8 @@
                 <p class="prod-to-buy">
                     Product name </p>
                 <div class="button show">
-                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
-                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                    <button type="button" class="buttons"><i class="fas fa-check-circle check-icon"></i></button>
+                    <button type="button" class="buttons"><i class="fas fa-times-circle cruz-icon"></i></button>
                 </div>
                 <div class="button hide">
                     <button type="button" class="add-button">Done</button>
@@ -76,8 +77,8 @@
                 <p class="prod-to-buy">
                     Product name </p>
                 <div class="button show">
-                    <button type="button" class="button-img"><img src="images/chec.png" alt=""></button>
-                    <button type="button" class="button-img"><img src="images/cancel.png" alt=""></button>
+                    <button type="button" class="buttons"><i class="fas fa-check-circle check-icon"></i></button>
+                    <button type="button" class="buttons"><i class="fas fa-times-circle cruz-icon"></i></button>
                 </div>
                 <div class="button hide">
                     <button type="button" class="add-button">Done</button>
@@ -90,7 +91,7 @@
                 <p class="prod-delete">
                     Product name </p>
                 <div class="button show">
-                    <button type="button" class="button-trash"><img src="images/trash.png" alt=""></button>
+                    <button type="button" class="buttons"><i class="fas fa-trash-alt trash-icon"></i></button>
                 </div>
                 <div class="button hide">
                     <button type="button" class="del-button">Delete</button>
@@ -102,7 +103,7 @@
                 <p class="prod-delete">
                     Product name </p>
                 <div class="button show">
-                    <button type="button" class="button-trash"><img src="images/trash.png" alt=""></button>
+                    <button type="button" class="buttons"><i class="fas fa-trash-alt trash-icon"></i></button>
                 </div>
                 <div class="button hide">
                     <button type="button" class="del-button">Delete</button>
